clusters/9ka/dex/cnp-dex.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dex
  namespace: dex
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dex
      app.kubernetes.io/instance: dex
  ingress:
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: "telemetry"
        protocol: TCP
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
